Changing the example to have over 7000 points.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "ejs-loader": "^0.2.1",
     "ejsify": "^1.0.0",
     "event-emitter": "^0.3.4",
+    "graham_scan": "^1.0.4",
+    "install": "^0.6.0",
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
+    "npm": "^3.8.1",
     "pushstate-server": "^1.8.1",
     "redux": "^3.3.1",
     "rivets": "^0.8.1",
