--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
+    "vanilla-pubsub": "^1.1.2",
     "webpack": "^1.12.14",
     "webpack-compile-templates": "^0.2.1"
   }
