--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "google-maps-d3-marker-cluster",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Super fast point clustering on Google Maps via D3js",
   "main": "dist/build.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot --config ./webpack.base.config.js",
+    "dev": "webpack-dev-server --inline --hot --host 0.0.0.0 --config ./webpack.base.config.js",
     "build": "webpack --progress --hide-modules --config webpack.prod.config.js && grunt",
     "test": "open http://localhost:8080/test.html",
     "docco": "docco src/**/*.js"
@@ -13,30 +13,30 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.5.2",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "chai": "^4.1.2",
-    "css-loader": "^0.28.9",
+    "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
     "director": "^1.2.8",
-    "ejs-loader": "^0.3.0",
+    "ejs-loader": "^0.2.1",
     "ejsify": "^1.0.0",
     "event-emitter": "^0.3.4",
     "graham_scan": "^1.0.4",
     "grunt": "^1.0.1",
     "grunt-contrib-uglify": "^3.3.0",
-    "install": "^0.10.2",
+    "install": "^0.6.0",
     "marker-spider": "^0.1.0",
     "markerwithlabel": "^1.1.13",
-    "mocha": "^5.0.0",
-    "node-sass": "^4.7.2",
-    "npm": "^5.6.0",
-    "pushstate-server": "^3.0.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
+    "mocha": "^2.4.5",
+    "node-sass": "^3.4.2",
+    "npm": "^3.8.1",
+    "pushstate-server": "^1.8.1",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
     "vanilla-pubsub": "^1.1.2",
-    "webpack": "^3.10.0",
+    "webpack": "^1.12.14",
     "webpack-compile-templates": "^0.2.1"
   }
 }
